08/ingress/nonstop/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: websample-ing
spec:
  rules:
  - host: 127.0.0.1.xip.io
    http:
      paths:
      - backend:
          serviceName: websample
          servicePort: 5000
        path: /
